syntax = "proto3";
package my_grpc_proto;
service HelloServer{
  rpc SayHello(HelloRequest)returns(HelloReplay){}
  rpc GetHelloMsg(HelloRequest)returns(HelloMessage){}
}

message HelloRequest{
  string name = 1;
}
message HelloReplay{
  string message = 1 ;
}
message HelloMessage{
  string msg = 2;
}